# citegraph

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  STATUS.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: RELEASE.md
evaluation/: README.md  RESULTS.md  evaluate.py
evaluation/gold/: sample_paper.json
examples/: quickstart.ipynb  quickstart_paper4.ipynb
research/: README.md  dicts.yaml  find_authors.py  preprocess.py  word_counts.py
research/archive/: README.md  helper_functions.py  label_papers.py  label_papers_old.py  pdf_extraction.py
scripts/: smoke_test.sh
src/citegraph/: __init__.py  _progress.py  authors.py  cli.py  config.py  cost_estimation.py  dedup.py  enrich.py  extract_metadata.py  extract_references.py  graph.py  ids.py  io.py  llm.py  pdf_to_markdown.py  pipeline.py  reports.py  schemas.py
tests/: conftest.py  test_authors.py  test_cli.py  test_cost_estimation.py  test_dedup.py  test_enrich.py  test_failure_isolation.py  test_graph.py  test_ids.py  test_inline_citation_check.py  test_io.py  test_llm_json_repair.py  test_packaging.py  test_pdf_traversal.py  test_pipeline.py  test_schemas.py  test_slice_references.py  test_smoke_script.py  test_truncation_retry.py
tests/fixtures/: sample_paper.md  sample_paper.metadata.json  sample_paper.references.json
