[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "citegraph"
version = "0.1.0"
description = "Build a deduplicated citation graph from a folder of academic PDFs using Gemini."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yabra Muvdi", email = "yabran.muvdi@gmail.com" },
  { name = "María Gutiérrez Ruan", email = "maria.gutierrezruan@unil.ch" },
]
keywords = ["citations", "bibliometrics", "academic-papers", "gemini", "pdf"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "google-genai>=0.3",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pandas>=2.0",
  "rapidfuzz>=3.6",
  "python-slugify>=8.0",
  "typer>=0.12,<0.13",
  # typer 0.12 is incompatible with click >= 8.2 (Parameter.make_metavar signature change),
  # which breaks --help and option parsing for any subcommand without positional args.
  "click<8.2",
  "rich>=13.0",
  "tenacity>=8.2",
]

[project.optional-dependencies]
pdf = [
  "docling>=2.0",
]
crossref = [
  "httpx>=0.27",
]
all = [
  "docling>=2.0",
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "httpx>=0.27",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
citegraph = "citegraph.cli:app"

[project.urls]
Homepage = "https://github.com/yabramuvdi/citegraph"
Repository = "https://github.com/yabramuvdi/citegraph"
Issues = "https://github.com/yabramuvdi/citegraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/citegraph"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Function-call defaults (typer.Option / typer.Argument) are idiomatic.
"src/citegraph/cli.py" = ["B008"]
# Original research scripts are not part of the package; lint loosely.
"research/**/*.py" = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
